Don't reload the home panel when shown

When the NTP is shown and is showing the Home panel, the panel doesn't
need to be reloaded.

Bug: 760090
Change-Id: I1ece3049d8c8887bda8cf851c59c3aea3dd69af2
Reviewed-on: https://chromium-review.googlesource.com/645286
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498820}
Former-commit-id: 10ac2e60c91b8de6072949d72df9eb8e1febacfc